more verbosity on README

--- a/.config/dotfiles/README.org
+++ b/.config/dotfiles/README.org
@@ -28,6 +28,7 @@ The programs that currently have a proper configuration file are:
 + =hub= for github integration for all editors
 + =spellcheck python-black python-pyflakes python-pytest= (optional) for emacs integration
 + Nerd fonts including: Hack, Dejavu, and Meslo
++ App that config is for: =dmenu, nvim, alacritty, emacs, blender, tmux, zsh, picom, offlineIMAP/mbsync, awesome=
 
 These should all be inside of standard repositories or AUR
 
