--- a/.config/awesome/README.org
+++ b/.config/awesome/README.org
@@ -131,13 +131,12 @@ local altkey       = "Mod1"
 local modkey1      = "Control"
 
 -- personal variables
-local browser           = "firefox"
-local editor            = os.getenv("EDITOR") or "vim"
-local editorgui         = "geany"
-local filemanager       = "thunar"
-local mailclient        = "geary"
+local browser           = "brave"
+local editorgui         = "emacsclient -c -a emacs"
+local filemanager       = "pcmanfm"
+local mailclient        = "mailspring"
 local mediaplayer       = "vlc"
-local scrlocker         = "slimlock"
+local scrlocker         = "lightlocker"
 local terminal          = "alacritty"
 local virtualmachine    = "virtualbox"
 #+END_SRC
@@ -148,8 +147,8 @@ Tags are essentially our workspaces. There are a ton of layouts available in awe
 #+BEGIN_SRC lua
 -- awesome variables
 awful.util.terminal = terminal
---awful.util.tagnames = {  " ", " ", " ", " ", " ", " ", " ", " ", " ", " "  }
-awful.util.tagnames = { " DEV ", " WWW ", " SYS ", " DOC ", " VBOX ", " CHAT ", " MUS ", " VID ", " GFX " }
+awful.util.tagnames = {  " ", " ", " ", " ", " ", " ", " ", " ", " ", " "  }
+-- awful.util.tagnames = { " DEV ", " WWW ", " SYS ", " DOC ", " VBOX ", " CHAT ", " MUS ", " VID ", " GFX " }
 awful.layout.suit.tile.left.mirror = true
 awful.layout.layouts = {
     awful.layout.suit.tile,
@@ -159,10 +158,8 @@ awful.layout.layouts = {
     --awful.layout.suit.tile.top,
     --awful.layout.suit.fair,
     --awful.layout.suit.fair.horizontal,
-    --awful.layout.suit.spiral,
-    --awful.layout.suit.spiral.dwindle,
     awful.layout.suit.max,
-    --awful.layout.suit.max.fullscreen,
+    awful.layout.suit.max.fullscreen,
     awful.layout.suit.magnifier,
     --awful.layout.suit.corner.nw,
     --awful.layout.suit.corner.ne,
@@ -172,8 +169,6 @@ awful.layout.layouts = {
     --lain.layout.cascade.tile,
     --lain.layout.centerwork,
     --lain.layout.centerwork.horizontal,
-    --lain.layout.termfair,
-    --lain.layout.termfair.center,
 }
 
 awful.util.taglist_buttons = my_table.join(
@@ -226,8 +221,6 @@ lain.layout.cascade.tile.offset_y      = 32
 lain.layout.cascade.tile.extra_padding = 5
 lain.layout.cascade.tile.nmaster       = 5
 lain.layout.cascade.tile.ncol          = 2
-
-beautiful.init(string.format(gears.filesystem.get_configuration_dir() .. "/themes/%s/theme.lua", chosen_theme))
 #+END_SRC
 
 * Menu
@@ -237,8 +230,7 @@ Awesome has a menu system if you want to use it.
 local myawesomemenu = {
     { "hotkeys", function() return false, hotkeys_popup.show_help end },
     { "manual", terminal .. " -e 'man awesome'" },
-    { "edit config", terminal.." vim /home/dt/.config/awesome/rc.lua" },
-    { "arandr", "arandr" },
+    { "edit config", terminal.." vim $HOME/.config/awesome/rc.lua" },
     { "restart", awesome.restart },
 }
 
@@ -254,6 +246,7 @@ awful.util.mymainmenu = freedesktop.menu.build({
         { "Log out", function() awesome.quit() end },
         { "Sleep", "systemctl suspend" },
         { "Restart", "systemctl reboot" },
+        { "Hibernate", "systemctl hibernate" },
         { "Exit", "systemctl poweroff" },
         -- other triads can be put here
     }
@@ -262,7 +255,7 @@ awful.util.mymainmenu = freedesktop.menu.build({
 #+END_SRC
 
 * Screen and wallpaper
-You can set wallpaper with awesome. This is optional, of course. Otherwise, just set wallpaper with your preferred wallpaper utility (such as nitrogen or feh).
+You can set wallpaper with awesome. This is optional, of course. Otherwise, just set wallpaper with your preferred wallpaper utility (such as *nitrogen* or feh).
 #+BEGIN_SRC lua
 -- Re-set wallpaper when a screen's geometry changes (e.g. different resolution)
 screen.connect_signal("property::geometry", function(s)
@@ -292,25 +285,25 @@ root.buttons(my_table.join(
 #+END_SRC
 
 * Keybindings
-| Keybinding                | Action                                                                   |
-|---------------------------+--------------------------------------------------------------------------|
-| MODKEY + RETURN          | opens terminal (alacritty is the terminal but can be easily changed)     |
-| MODKEY + SHIFT + RETURN  | opens run launcher (dmenu is the run launcher but can be easily changed) |
-| MODKEY + SHIFT + c       | closes window with focus                                                 |
-| MODKEY + SHIFT + r       | restarts awesome                                                         |
-| MODKEY + SHIFT + q       | quits awesome                                                            |
-| MODKEY + 1-9             | switch focus to workspace (1-9)                                          |
-| MODKEY + SHIFT + 1-9     | send focused window to workspace (1-9)                                   |
-| MODKEY + j               | switches focus between windows in the stack, going down                  |
-| MODKEY + k               | switches focus between windows in the stack, going up                    |
-| MODKEY + h               | switches focus between windows in the stack, going left                  |
-| MODKEY + l               | switches focus between windows in the stack, going right                 |
-| MODKEY + SHIFT + j       | rotates the windows in the stack, going down                             |
-| MODKEY + SHIFT + k       | rotates the windows in the stack, going up                               |
-| MODKEY + SHIFT + h       | rotates the windows in the stack, going left                             |
-| MODKEY + SHIFT + l       | rotates the windows in the stack, going right                            |
-| MODKEY + period          | switch focus to next monitor                                             |
-| MODKEY + comma           | switch focus to prev monitor                                             |
+| Keybinding              | Action                                                                   |
+|-------------------------+--------------------------------------------------------------------------|
+| MODKEY + RETURN         | opens terminal (alacritty is the terminal but can be easily changed)     |
+| MODKEY + SHIFT + RETURN | opens run launcher (dmenu is the run launcher but can be easily changed) |
+| MODKEY + SHIFT + c      | closes window with focus                                                 |
+| MODKEY + SHIFT + r      | restarts awesome                                                         |
+| MODKEY + SHIFT + q      | quits awesome                                                            |
+| MODKEY + 1-9            | switch focus to workspace (1-9)                                          |
+| MODKEY + SHIFT + 1-9    | send focused window to workspace (1-9)                                   |
+| MODKEY + j              | switches focus between windows in the stack, going down                  |
+| MODKEY + k              | switches focus between windows in the stack, going up                    |
+| MODKEY + h              | switches focus between windows in the stack, going left                  |
+| MODKEY + l              | switches focus between windows in the stack, going right                 |
+| MODKEY + SHIFT + j      | rotates the windows in the stack, going down                             |
+| MODKEY + SHIFT + k      | rotates the windows in the stack, going up                               |
+| MODKEY + SHIFT + h      | rotates the windows in the stack, going left                             |
+| MODKEY + SHIFT + l      | rotates the windows in the stack, going right                            |
+| MODKEY + period         | switch focus to next monitor                                             |
+| MODKEY + comma          | switch focus to prev monitor                                             |
 
 #+BEGIN_SRC lua
 globalkeys = my_table.join(
@@ -319,66 +312,38 @@ globalkeys = my_table.join(
     -- dmenu
     awful.key({ modkey, "Shift" }, "Return",
     function ()
-        awful.spawn(string.format("dmenu_run",
+        awful.spawn(string.format("dmenu_run -i",
         beautiful.bg_normal, beautiful.fg_normal, beautiful.bg_focus, beautiful.fg_focus))
 	end,
     {description = "show dmenu", group = "hotkeys"}),
 
     -- My dmenu scripts (Alt+Ctrl+Key)
-    awful.key({ altkey, "Control" }, "e", function () awful.util.spawn( "./.dmenu/dmenu-edit-configs.sh" ) end,
+    awful.key({ altkey, "Control" }, "e", function () awful.util.spawn( "./.config/dmenu/scripts/dmenu-edit-configs.sh" ) end,
         {description = "edit config files" , group = "dmenu scripts" }),
-    awful.key({ altkey, "Control" }, "m", function () awful.util.spawn( "./.dmenu/dmenu-sysmon.sh" ) end,
-        {description = "system monitoring apps" , group = "dmenu scripts" }),
+    awful.key({ altkey, "Control" }, "m", function () awful.util.spawn( "./.config/dmenu/scripts/dmenu-manpages.sh" ) end,
+        {description = "dmenu man page searcher" , group = "dmenu scripts" }),
     awful.key({ altkey, "Control" }, "p", function () awful.util.spawn( "passmenu" ) end,
         {description = "passmenu" , group = "dmenu scripts" }),
-    awful.key({ altkey, "Control"  }, "s", function () awful.util.spawn( "./.dmenu/dmenu-surfraw.sh" ) end,
-        {description = "surfraw web search" , group = "dmenu scripts" }),
     awful.key({ altkey, "Control"  }, "t", function () awful.util.spawn( "./.dmenu/dmenu-trading.sh" ) end,
         {description = "trading programs" , group = "dmenu scripts" }),
 
     -- My applications (Super+Alt+Key)
-    awful.key({ modkey, altkey }, "a", function () awful.util.spawn( terminal.." -e ncpamixer" ) end,
-        {description = "ncpamixer" , group = "terminal apps" }),
-    awful.key({ modkey, altkey }, "b", function () awful.util.spawn( "surf www.youtube.com/c/DistroTube" ) end,
-        {description = "surf web browser" , group = "gui apps" }),
-    awful.key({ modkey, altkey  }, "c", function () awful.util.spawn( terminal.." -e cmus" ) end,
-        {description = "cmus" , group = "terminal apps" }),
-    awful.key({ modkey, altkey }, "e", function () awful.util.spawn( terminal.." -e neomutt" ) end,
-        {description = "neomutt email" , group = "terminal apps" }),
-    awful.key({ modkey, altkey  }, "f", function () awful.util.spawn( terminal.." -e sh ./.config/vifm/scripts/vifmrun" ) end,
-        {description = "vifm" , group = "terminal apps" }),
-    awful.key({ modkey, altkey  }, "i", function () awful.util.spawn( terminal.." -e irssi" ) end,
-        {description = "irssi" , group = "terminal apps" }),
-    awful.key({ modkey, altkey  }, "j", function () awful.util.spawn( terminal.." -e joplin" ) end,
-        {description = "joplin" , group = "terminal apps" }),
+    awful.key({ modkey, altkey }, "b", function () awful.util.spawn( "brave" ) end,
+        {description = "brave browser" , group = "gui apps" }),
+    awful.key({ modkey, altkey }, "e", function () awful.spawn.with_shell( "export SPACEMACSDIR=$HOME/.config/spacemacs/ && emacsclient -c -a emacs" ) end,
+        {description = editorgui , group = "gui apps" }),
+    awful.key({ modkey, altkey  }, "f", function () awful.util.spawn( "pcmanfm" ) end,
+        {description = "pcmanfm" , group = "gui apps" }),
     awful.key({ modkey, altkey }, "l", function () awful.util.spawn( terminal.." -e lynx --cfg=~/.lynx/lynx.cfg --lss=~/.lynx/lynx.lss -vikeys gopher://distro.tube" ) end,
         {description = "lynx cli browser" , group = "terminal apps" }),
     awful.key({ modkey, altkey }, "m", function () awful.util.spawn( terminal.." -e toot curses" ) end,
         {description = "toot curses" , group = "terminal apps" }),
-    awful.key({ modkey, altkey }, "n", function () awful.util.spawn( terminal.." -e newsboat" ) end,
-        {description = "newsboat" , group = "terminal apps" }),
-    awful.key({ modkey, altkey  }, "p", function () awful.util.spawn( terminal.." -e pianobar" ) end,
-        {description = "pianobar" , group = "terminal apps" }),
-    awful.key({ modkey, altkey }, "r", function () awful.util.spawn( terminal.." -e rtv" ) end,
-        {description = "rtv" , group = "terminal apps" }),
-    awful.key({ modkey, altkey  }, "w", function () awful.util.spawn( terminal.." -e wopr report.xml" ) end,
-        {description = "wopr report.xml" , group = "terminal apps" }),
-    awful.key({ modkey, altkey  }, "y", function () awful.util.spawn( terminal.." -e youtube-viewer" ) end,
-        {description = "youtube-viewer" , group = "terminal apps" }),
 
     -- screenshots
-    awful.key({ }, "Print", function () awful.util.spawn("scrot 'ArcoLinuxD-%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f $$(xdg-user-dir PICTURES)'") end,
-        {description = "Scrot", group = "screenshots"}),
-    awful.key({ modkey1           }, "Print", function () awful.util.spawn( "xfce4-screenshooter" ) end,
-        {description = "Xfce screenshot", group = "screenshots"}),
-    awful.key({ modkey1, "Shift"  }, "Print", function() awful.util.spawn("gnome-screenshot -i") end,
-        {description = "Gnome screenshot", group = "screenshots"}),
-
-    -- Personal keybindings}}}
-
+    awful.key({ }, "Print", function () awful.util.spawn("scrot 'ArchLinuxD-%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f $$(xdg-user-dir PICTURES)'") end,
+        {description = "ScreenShot", group = "screenshots"}),
 
     -- Hotkeys Awesome
-
     awful.key({ modkey,           }, "s",      hotkeys_popup.show_help,
         {description = "show help", group="awesome"}),
 
@@ -531,8 +496,8 @@ globalkeys = my_table.join(
               {description = "delete tag", group = "tag"}),
 
     -- Standard program
-    awful.key({ modkey,           }, "Return", function () awful.spawn( terminal.." -e fish" ) end,
-              {description = "terminal with fish shell", group = "super"}),
+    awful.key({ modkey,           }, "Return", function () awful.spawn( terminal ) end,
+              {description = "terminal with zsh shell", group = "super"}),
     awful.key({ modkey, "Shift" }, "r", awesome.restart,
               {description = "reload awesome", group = "awesome"}),
     awful.key({ modkey, "Shift"   }, "q",  function () awful.spawn.with_shell( '~/.dmenu/prompt "are you sure?" "killall awesome"' ) end,
@@ -573,8 +538,6 @@ globalkeys = my_table.join(
     -- Widgets popups
     awful.key({ altkey, }, "c", function () lain.widget.calendar.show(7) end,
               {description = "show calendar", group = "widgets"}),
-    awful.key({ altkey, }, "h", function () if beautiful.fs then beautiful.fs.show(7) end end,
-              {description = "show filesystem", group = "widgets"}),
     awful.key({ altkey, }, "w", function () if beautiful.weather then beautiful.weather.show(7) end end,
               {description = "show weather", group = "widgets"}),
 
@@ -588,13 +551,13 @@ globalkeys = my_table.join(
     --awful.key({ modkey1 }, "Up",
     awful.key({ }, "XF86AudioRaiseVolume",
         function ()
-            os.execute(string.format("amixer -q set %s 1%%+", beautiful.volume.channel))
+            os.execute(string.format("amixer -q set %s 10%%+", beautiful.volume.channel))
             beautiful.volume.update()
         end),
     --awful.key({ modkey1 }, "Down",
     awful.key({ }, "XF86AudioLowerVolume",
         function ()
-            os.execute(string.format("amixer -q set %s 1%%-", beautiful.volume.channel))
+            os.execute(string.format("amixer -q set %s 10%%-", beautiful.volume.channel))
             beautiful.volume.update()
         end),
     awful.key({ }, "XF86AudioMute",
@@ -639,7 +602,7 @@ globalkeys = my_table.join(
               end,
               {description = "lua execute prompt", group = "awesome"})
     --]]
-)
+    )
 
 clientkeys = my_table.join(
     awful.key({ altkey, "Shift"   }, "m",      lain.util.magnify_client,
@@ -795,8 +758,8 @@ awful.rules.rules = {
     -- Set applications to be maximized at startup.
     -- find class or role via xprop command
 
-    { rule = { class = editorgui },
-          properties = { maximized = true } },
+    -- { rule = { class = editorgui },
+          -- properties = { maximized = true } },
 
     { rule = { class = "Gimp*", role = "gimp-image-window" },
           properties = { maximized = true } },
@@ -805,9 +768,6 @@ awful.rules.rules = {
           properties = { maximized = true } },
 
     { rule = { class = mediaplayer },
-          properties = { maximized = true } },
-
-    { rule = { class = "Vlc" },
           properties = { maximized = true } },
 
     { rule = { class = "VirtualBox Manager" },
@@ -842,7 +802,6 @@ awful.rules.rules = {
           "Skype",
           "System-config-printer.py",
           "Sxiv",
-          "Unetbootin.elf",
           "Wpa_gui",
           "pinentry",
           "veromix",
@@ -950,9 +909,14 @@ client.connect_signal("unfocus", function(c) c.border_color = beautiful.border_n
 #+END_SRC
 
 * Autostart
+Autostarting: polkit, background restore, compositor, caps lock to escape remap, emacs daemon, networking, audio server, and firewall
 #+BEGIN_SRC lua
+awful.spawn.with_shell("lxsession")
 awful.spawn.with_shell("nitrogen --restore")
 awful.spawn.with_shell("picom --config  $HOME/.config/picom/picom.conf")
+awful.spawn.with_shell("setxkbmap -option caps:escape")
 awful.spawn.with_shell("nm-applet")
 awful.spawn.with_shell("volumeicon")
+awful.spawn.with_shell("firewalld")
+awful.spawn.with_shell("emacs --daemon")
 #+END_SRC
