--- a/.config/awesome/README.org
+++ b/.config/awesome/README.org
@@ -231,7 +231,7 @@ Awesome has a menu system if you want to use it.
 local myawesomemenu = {
     { "hotkeys", function() return false, hotkeys_popup.show_help end },
     { "manual", terminal .. " -e 'man awesome'" },
-    { "edit config", terminal.." vim $HOME/.config/awesome/rc.lua" },
+    { "edit config", terminal.." -e nvim $HOME/.config/awesome/rc.lua" },
     { "restart", awesome.restart },
 }
 
@@ -243,10 +243,8 @@ awful.util.mymainmenu = freedesktop.menu.build({
         -- other triads can be put here
     },
     after = {
-        { "Terminal", terminal },
         { "Log out", function() awesome.quit() end },
         { "Sleep", "systemctl suspend" },
-        { "Restart", "systemctl reboot" },
         { "Hibernate", "systemctl hibernate" },
         { "Exit", "systemctl poweroff" },
         -- other triads can be put here
@@ -299,6 +297,7 @@ root.buttons(my_table.join(
 | MODKEY + SHIFT + c      | closes window with focus                                                                                |
 | MODKEY + SHIFT + r      | restarts awesome                                                                                        |
 | MODKEY + SHIFT + q      | quits awesome                                                                                           |
+| MODKEY + SHIFT + l      | locks screen                                                                                            |
 | MODKEY + 1-9            | switch focus to workspace (1-9)                                                                         |
 | MODKEY + SHIFT + 1-9    | send focused window to workspace (1-9)                                                                  |
 | MODKEY + j              | switches focus between windows in the stack, going down                                                 |
@@ -319,7 +318,7 @@ globalkeys = my_table.join(
     -- dmenu
     awful.key({ modkey, "Shift" }, "Return",
     function ()
-        awful.spawn(string.format("dmenu_run -i",
+        awful.spawn(string.format("dmenu_run -h 20 -p run:",
         beautiful.bg_normal, beautiful.fg_normal, beautiful.bg_focus, beautiful.fg_focus))
 	end,
     {description = "show dmenu", group = "hotkeys"}),
@@ -499,26 +498,28 @@ globalkeys = my_table.join(
               {description = "delete tag", group = "tag"}),
 
     -- Standard program
-    awful.key({ modkey,           }, "Return", function () awful.spawn( terminal ) end,
+    awful.key({ modkey,         }, "Return", function () awful.spawn( terminal ) end,
               {description = "terminal with zsh shell", group = "super"}),
     awful.key({ modkey, "Shift" }, "r", awesome.restart,
               {description = "reload awesome", group = "awesome"}),
-    awful.key({ modkey, "Shift"   }, "q",  function () awful.spawn.with_shell( '~/.dmenu/prompt "are you sure?" "killall awesome"' ) end,
+    awful.key({ modkey, "Shift" }, "q", function () awful.spawn.with_shell( '~/.dmenu/prompt "are you sure?" "killall awesome"' ) end,
               {description = "quit awesome", group = "awesome"}),
+    awful.key({ modkey, "Shift" }, "l", function () awful.spawn.with_shell( "dm-tool lock" ) end,
+              {description = "lock screen", group = "awesome"}),
 
-    awful.key({ altkey, "Shift"   }, "l",     function () awful.tag.incmwfact( 0.05)          end,
+    awful.key({ altkey, "Shift" }, "l",     function () awful.tag.incmwfact( 0.05)          end,
               {description = "increase master width factor", group = "layout"}),
-    awful.key({ altkey, "Shift"   }, "h",     function () awful.tag.incmwfact(-0.05)          end,
+    awful.key({ altkey, "Shift" }, "h",     function () awful.tag.incmwfact(-0.05)          end,
               {description = "decrease master width factor", group = "layout"}),
-    awful.key({ modkey, "Shift"   }, "h",     function () awful.tag.incnmaster( 1, nil, true) end,
+    awful.key({ modkey, "Shift" }, "h",     function () awful.tag.incnmaster( 1, nil, true) end,
               {description = "increase the number of master clients", group = "layout"}),
-    awful.key({ modkey, "Shift"   }, "l",     function () awful.tag.incnmaster(-1, nil, true) end,
+    awful.key({ modkey, "Shift" }, "l",     function () awful.tag.incnmaster(-1, nil, true) end,
               {description = "decrease the number of master clients", group = "layout"}),
     awful.key({ modkey, "Control" }, "h",     function () awful.tag.incncol( 1, nil, true)    end,
               {description = "increase the number of columns", group = "layout"}),
     awful.key({ modkey, "Control" }, "l",     function () awful.tag.incncol(-1, nil, true)    end,
               {description = "decrease the number of columns", group = "layout"}),
-    awful.key({ modkey,           }, "space", function () awful.layout.inc( 1)                end,
+    awful.key({ modkey,         }, "space", function () awful.layout.inc( 1)                end,
               {description = "select next", group = "layout"}),
     --awful.key({ modkey, "Shift"   }, "space", function () awful.layout.inc(-1)                end,
              -- {description = "select previous", group = "layout"}),
