Gruvbox in Dmen

--- a/.config/awesome/README.org
+++ b/.config/awesome/README.org
@@ -318,7 +318,7 @@ globalkeys = my_table.join(
     -- dmenu
     awful.key({ modkey, "Shift" }, "Return",
     function ()
-        awful.spawn(string.format("dmenu_run -h 20 -p run:",
+        awful.spawn(string.format("dmenu_run -h 20 -p run: -bw 2",
         beautiful.bg_normal, beautiful.fg_normal, beautiful.bg_focus, beautiful.fg_focus))
 	end,
     {description = "show dmenu", group = "hotkeys"}),
