--- a/.config/doom/config.org
+++ b/.config/doom/config.org
@@ -20,6 +20,7 @@
 - [[#manpages][MANPAGES]]
 - [[#mu4e][MU4E]]
 - [[#neotree][NEOTREE]]
+- [[#tree-sitter][TREE-SITTER]]
 - [[#open-specific-files][OPEN SPECIFIC FILES]]
 - [[#org-mode][ORG MODE]]
 - [[#registers][REGISTERS]]
@@ -337,6 +338,17 @@ Neotree is a file tree viewer.  When you open neotree, it jumps to the current f
       :desc "Toggle neotree file viewer"
       "t n" #'neotree-toggle)
 #+END_SRC
+
+* TREE-SITTER
+Tree-sitter is a open standard with bindings to emacs (similar to LSP or DAP) that allows for improve understanding of code languages. This is used here primarily to get better syntax highlighting while coding.
+
+#+begin_src emacs-lisp
+(use-package! tree-sitter
+  :config
+  (require 'tree-sitter-langs)
+  (global-tree-sitter-mode)
+  (add-hook 'tree-sitter-after-on-hook #'tree-sitter-hl-mode))
+#+end_src
 
 * OPEN SPECIFIC FILES
 Keybindings to open files that I work with all the time using the find-file command, which is the interactive file search that opens with 'C-x C-f' in GNU Emacs or 'SPC f f' in Doom Emacs.  These keybindings use find-file non-interactively since we specify exactly what file to open.  The format I use for these bindings is 'SPC -' plus 'key' since Doom Emacs does not use these keybindings.
